--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<tr>
 						<th>Name</th>
 						<td>
-														<img src="https://doeresults.gitam.edu/photo/img.aspx?id=VU21CSEN0500007" class="user-img"> YARKAREDDY SUKUMAR REDDY						</td>
+														<img src="https://doeresults.gitam.edu/photo/img.aspx?id=VU21CSEN0101033" class="user-img"> SIVA CHARAN						</td>
 					</tr>
 					<tr>
 						<th>Department</th>
@@ -97,13 +97,13 @@
 					</tr>
 					<tr>
 						<th>Mobile</th>
-						<td style="color:blue;">
+						<td style="color:black;">
 							8897558829						</td>
 					</tr>
 					<tr>
 						<th>E-mail</th>
 						<td>
-							syarkare@gitam.in						</td>
+							sponnada2@gitam.in						</td>
 					</tr>
 										<tr>
 						<th>Booking date</th>
@@ -112,8 +112,8 @@
 					</tr>
 					<tr>
 						<th>Booking slot</th>
-						<td style="color:red;">
-							07:00 AM to 08:00 AM						</td>
+						<td style="color:green;">
+							03:00 PM to 04:00 PM						</td>
 					</tr>
 
 					<tr>
