--- a/SIVA.html
+++ b/SIVA.html
@@ -83,7 +83,7 @@
 					<tr>
 						<th>Name</th>
 						<td>
-														<img src="https://doeresults.gitam.edu/photo/img.aspx?id=VU21CSEN0101033" class="user-img"> SIVA CHARAN					</td>
+														<img src="https://doeresults.gitam.edu/photo/img.aspx?id=2024091496" class="user-img"> JAIDEEP					</td>
 					</tr>
 					<tr>
 						<th>Department</th>
@@ -112,8 +112,8 @@
 					</tr>
 					<tr>
 						<th>Booking slot</th>
-						<td style="color:green;">
-							03:00 PM to 04:00 PM						</td>
+						<td style="color:#007467;">
+							04:00 PM to 05:00 PM						</td>
 					</tr>
 
 					<tr>
